--- a/templates/index.html
+++ b/templates/index.html
@@ -2,32 +2,43 @@
 
 {% block body %}
 
-<h3>Ongoing and Upcoming Hackathons</h3>
-<table class="table table-bordered">
+<div class="dropdown">
+	<h5>Status:</h5>
+	<button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	  {{sts}}
+	</button>
+	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+	  <a class="dropdown-item" href="/">All</a>
+	  <a class="dropdown-item" href="/upcoming">Upcoming</a>
+	  <a class="dropdown-item" href="/ongoing">Ongoing</a>
+	</div>
+  </div>
+  <br>
+<table class="table">
 	<thead>
-		<tr>
-			<th>Serial</th>
-			<th>Name</th>
-			<th>Organizer</th>
-			<th>Starting Date</th>
-			<th>Ending Date</th>
-			<th>Status</th>
-			<th>Contest Website</th>
-		</tr>
+	  <tr>
+		<th scope="col">#</th>
+		<th>Name</th>
+		<th>Organizer</th>
+		<th>Start</th>
+		<th>End</th>
+		<th>Link</th>
+	  </tr>
 	</thead>
 	<tbody>
 		{% for contest in contests %}
-			<tr>
-				<td>{{ contests.index(contest)+1 }}</td>
-				<td>{{ contest.split(' :: ')[0] }}</td>
-				<td>{{ contest.split(' :: ')[1] }}</td>
-				<td>{{ contest.split(' :: ')[2] }}</td>
-				<td>{{ contest.split(' :: ')[3] }}</td>
-				<td>{{ contest.split(' :: ')[4] }}</td>
-				<td><a href="{{ contest.split(' :: ')[5] }}">{{ contest.split(' :: ')[5] }}</a></td>
-			</tr>
+		<tr>
+			<td>{{ contests.index(contest)+1 }}</td>
+			<td>{{ contest.split(' :: ')[0] }}</td>
+			<td>{{ contest.split(' :: ')[1] }}</td>
+			<td>{{ contest.split(' :: ')[2] }}</td>
+			<td>{{ contest.split(' :: ')[3] }}</td>
+			<td><a href="{{ contest.split(' :: ')[5] }}" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+				<path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+				<path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+			  </svg></a></td>
+		</tr>
 		{% endfor %}
 	</tbody>
-</table>
-
+  </table>
 {% endblock %}
